--- a/Ваш БанкирЪ/Ваш БанкирЪ.csproj
+++ b/Ваш БанкирЪ/Ваш БанкирЪ.csproj
@@ -205,6 +205,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.11</Version>
     </PackageReference>
+    <PackageReference Include="NLog">
+      <Version>4.7.6</Version>
+    </PackageReference>
     <PackageReference Include="WinRTXamlToolkit.Controls.DataVisualization.UWP">
       <Version>2.3.0</Version>
     </PackageReference>
