--- a/Ваш БанкирЪ/Ваш БанкирЪ.csproj
+++ b/Ваш БанкирЪ/Ваш БанкирЪ.csproj
@@ -20,7 +20,7 @@
     <PackageCertificateKeyFile>Ваш БанкирЪ_TemporaryKey.pfx</PackageCertificateKeyFile>
     <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
     <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
-    <AppxPackageDir>G:\Курсач\AppPackages\Test\</AppxPackageDir>
+    <AppxPackageDir>G:\Курсач\AppPackages\арву\</AppxPackageDir>
     <AppxBundle>Auto</AppxBundle>
     <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
     <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
